@@ -1348,18 +1348,19 @@ var CloudCommander, Util,
             pCurrentFile = null;
         
         var lCurrent    = pCurrentFile || DOM.getCurrentFile(),
-            lName       = DOM.getCurrentName(lCurrent),
-            lNewName    = prompt("Rename", lName) || lName;
-        
-        if( !Util.strCmp(lName, lNewName) ){
+            lFrom       = DOM.getCurrentName(lCurrent),
+            lTo    = prompt("Rename", lFrom) || lFrom,
+            lDirPath    = DOM.getCurrentDirPath();
+        if( !Util.strCmp(lFrom, lTo) ){
             var lFiles      = {
-                from    : lName,
-                to      : lNewName
+                from    : lDirPath + lFrom,
+                to      : lDirPath + lTo
             };
             
+            DOM.Images.showLoad();
+            
             CloudCommander.getConfig(function(pConfig){
-                var lUrl    = DOM.getCurrentDirPath();
-                lUrl        = pConfig && pConfig.api_url + '/mv';
+                var lUrl        = pConfig && pConfig.api_url + '/mv';
                 
                 DOM.ajax({
                     method  : 'put',
@@ -1368,7 +1369,7 @@ var CloudCommander, Util,
                     error   : DOM.Images.showError,
                     success : function(pData){
                         DOM.Images.hideLoad();
-                        DOM.setCurrentName(lName, lCurrent);
+                        DOM.setCurrentName(lTo, lCurrent);
                         Util.log(pData);
                     }
                 });
