@@ -212,7 +212,7 @@
         if(lRet){
             var p       = pParams,
                 lCmd    = p.command,
-                lFiles  = Util.stringifyJSON(p.body);
+                lFiles  = Util.parseJSON(p.body);
             console.log(p.body);
             switch(lCmd){
                 case 'auth':
@@ -234,14 +234,15 @@
                     });
                     break;
                 case 'mv':
-                    if(lFiles)
-                        Util.log(lFiles);
+                    if( Util.checkObjTrue(lFiles, ['from', 'to']) )
                         fs.rename(lFiles.from, lFiles.to, function(pError){
                             if(!pError)
                                 main.sendResponse(pParams);
                             else
                                 main.sendError(pParams, pError);
                         });
+                    else
+                            main.sendError(pParams, p.data);
                     break;
                 
                 case 'cp':
