@@ -184,6 +184,8 @@ generation of json of directory listing.
 
 * Added to html templating.
 
+* Added ability to rename files.
+
 
 2012.12.12, Version 0.1.8
 
